- small improvements in vignette - added reference
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/uibk-rprog-2017@172 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/hetprobit/vignettes/hetprobit.bib
+++ b/pkg/hetprobit/vignettes/hetprobit.bib
@@ -20,6 +20,15 @@
   doi = {10.2307/2111669}
 }
 
+@Article{Freeman+Keele+etal:2015,
+  author = {Eric Freeman and Luke Keele and David Park and Julia Salzman and Brendan Weickert},
+  title = {The Plateau Problem in the Heteroskedastic Probit Model},
+  journal = {ArXiv e-prints}, 
+  year = {2015},
+  month = aug,
+  url = {https://arxiv.org/abs/1508.03262}
+}
+
 @Article{Harvey:1976,
   author = {Andrew C. Harvey},
   title = {Estimating Regression Models with Multiplicative Heteroscedasticity},
@@ -95,14 +104,4 @@
   year = {2017},
   url = {https://www.R-project.org/}
 }
-
-@Book{Greene:2012,
-  author = {William H. Greene},
-  title = {Econometric Analysis},
-  year = {2012},
-  edition = {7th},
-  publisher = {Pearson},
-  address = {Prentice Hall}
-}
-
 
