--- a/pkg/hetprobit/vignettes/hetprobit.Rnw
+++ b/pkg/hetprobit/vignettes/hetprobit.Rnw
@@ -12,9 +12,11 @@
 
 \Abstract{
   The \pkg{hetprobit} package (\url{https://R-Forge.R-project.org/projects/uibk-rprog-2017/})
-  fits probit regression models \ldots FIXME. In the following the methodology of heteroscedastic probit
-  models is presented, along with an illustration of voter turnout data from \cite{Nagler:1991} and   
-  a replication of the results of the \pkg{glmx} package.
+  fits heteroscedastic probit regression models via maximum likelihood. 
+  In the following the methodology of heteroscedastic probit models is briefly presented.
+  The implementation of such models in \proglang{R} and the practical use of it using the example of   
+  voter turnout data from \cite{Nagler:1991} are shown. Finally, a replication of the results of the 
+  \pkg{glmx} package is presented.
 }
 
 \Address{
@@ -88,16 +90,17 @@ d <- mn$data
 %\VignetteIndexEntry{Heteroscedastic Probit Regression}
 
 
-\section{Introduction} FIXME
+\section{Introduction} \label{sec:intro}
 In standard probit regression models the probability of a success, i.e. $P(Y_i = 1)$, is 
 modelled as 
 $$
 P(Y_i = 1) = \pi_{i} = \Phi(x_i^\top \beta)
 $$
 where $\Phi(\cdot)$ is the cdf of a standard normal distribution. \\
-The general assumption that the variance of the error term is constant and due to identifiability 
-set to one is relaxed in the heteroscedastic probit model. The variance can vary systematically and 
-is now modelled as a multiplicative function of regressor variables, i.e. 
+The general assumption that the variance of the error term is constant and due 
+to identifiability set to one is relaxed in the heteroscedastic probit model. 
+The variance can vary systematically and is now modelled as a multiplicative 
+function of regressor variables, i.e. 
 $$
 \sigma_i = \exp(z_i^\top \gamma). 
 $$
@@ -108,13 +111,19 @@ $$
 $$
 Note that the scale model is only identified without intercept. 
 
+For a detailed discussion of heteroscedastic probit models see e.g. \cite{Harvey:1976}, 
+\cite{Alvarez+Brehm:1995}, \cite{Keele+Park:2006} and \cite{Freeman+Keele+etal:2015}.\\
+Sections~\ref{sec:implementation} and \ref{sec:illustration} show the implementation 
+of such models in \proglang{R} \citep{R} and the practical use of it using the example 
+of voter turnout data from \cite{Nagler:1991}. Finally, a replication of the results of 
+the \pkg{glmx} package is presented.
 
+\newpage
+\section{Implementation}\label{sec:implementation}
 
-\section{Implementation}
-
-As usual in many other regression packages for \proglang{R} \citep{R}, the main model 
-fitting function \code{hetprobit()} uses a formula-based interface and returns an (\proglang{S}3) 
-object of class \code{hetprobit}:
+As usual in many other regression packages for \proglang{R}, the main model 
+fitting function \code{hetprobit()} uses a formula-based interface and returns an 
+(\proglang{S}3) object of class \code{hetprobit}:
 %
 \begin{verbatim}
 hetprobit(formula, data, subset, na.action,
@@ -123,44 +132,47 @@ hetprobit(formula, data, subset, na.action,
 \end{verbatim}
 %
 Actually, the \code{formula} can be a two-part \code{Formula} \citep{Formula}, 
-specifying separate sets of regressors $x_i$ and $z_i$ for the location and scale submodels, 
-respectively.
+specifying separate sets of regressors $x_i$ and $z_i$ for the location and 
+scale submodels, respectively.
 
-The underlying workhorse function is \code{hetprobit_fit()} which has a matrix interface 
-and returns an unclassed list.
+The underlying workhorse function is \code{hetprobit_fit()} which has a matrix 
+interface and returns an unclassed list.
 
-Additionally, numerous standard \proglang{S}3 methods are provided in the Table~\ref{tab:methods} 
-below. As usual fitted means of the observed response variable can be extracted by the 
-generic function \code{fitted}.
+Additionally, numerous standard \proglang{S}3 methods are provided 
+(see Table~\ref{tab:methods}). As usual fitted means of the observed response variable 
+can be extracted by the generic function \code{fitted}.
 
 \begin{table}[t!]
 \centering
 \begin{tabular}{lp{11.2cm}}
 \hline
 Method & Description \\ \hline
-\code{print()}       & Simple printed display with coefficients \\
-\code{summary()}     & Standard regression summary; returns \code{summary.hetprobit} object (with \code{print()} method) \\
-\code{coef()}	     & Extract coefficients \\
-\code{vcov()}	     & Associated covariance matrix \\
-\code{predict()}     & (Different types of) predictions for new data \\
-\code{residuals()}   & Extract (different types of) residuals \\
-\code{terms()}       & Extract terms \\
+\code{print()}	& Simple printed display with coefficients \\
+\code{summary()}	& Standard regression summary; returns \code{summary.hetprobit} object 
+                    (with \code{print()} method) \\
+\code{coef()}	& Extract coefficients \\
+\code{vcov()}	& Associated covariance matrix \\
+\code{predict()}  & (Different types of) predictions for new data \\
+\code{residuals()}& Extract (different types of) residuals \\
+\code{terms()}    & Extract terms \\
 \code{model.matrix()}& Extract model matrix (or matrices) \\
-\code{nobs()}	     & Extract number of observations \\
+\code{nobs()}	   & Extract number of observations \\
 \code{logLik()}      & Extract fitted log-likelihood \\
 \code{bread()}       & Extract bread for \pkg{sandwich} covariance \\
-\code{estfun()}      & Extract estimating functions (= gradient contributions) for \pkg{sandwich} covariances \\
+\code{estfun()}      & Extract estimating functions (= gradient contributions) for 
+                       \pkg{sandwich} covariances \\
 \code{getSummary()}  & Extract summary statistics for \code{mtable()} \\ \hline
 \end{tabular}
 \caption{\label{tab:methods} \proglang{S}3 methods provided in \pkg{hetprobit}.}
 \end{table}
 
-Due to these methods a number of useful utilities work automatically, e.g., \code{AIC()}, \code{BIC()},
-\code{coeftest()} (\pkg{lmtest}), \code{lrtest()} (\pkg{lmtest}), \code{waldtest()} (\pkg{lmtest}),
-\code{linearHypothesis()} (\pkg{car}), \code{mtable()} (\pkg{memisc}), etc.
+Due to these methods a number of useful utilities work automatically, e.g., 
+\code{AIC()}, \code{BIC()}, \code{coeftest()} (\pkg{lmtest}), \code{lrtest()} (\pkg{lmtest}), 
+\code{waldtest()} (\pkg{lmtest}), \code{linearHypothesis()} (\pkg{car}), \code{mtable()} 
+(\pkg{memisc}), etc.
 
 
-\section{Illustration}
+\section{Illustration}\label{sec:illustration}
 This section is devoted to present the functionality of the package using data on voter 
 turnout of the U.S. presidential elections in 1984. The data has first been analyzed by 
 \cite{Nagler:1991} to see whether registration laws and education have an influence on the
@@ -203,8 +215,10 @@ summary(mn)
 @
 
 
-In a next step the replicated homoscedastic model will be modified in such a way that all regressors (including interactions) in the mean model are also part of the scale submodel (full model \code{m1}). 
-Additionally, a reduced model without interaction effects will be fitted (model \code{m2}).
+In a next step the replicated homoscedastic model will be modified in such a way 
+that all regressors (including interactions) in the mean model are also part of the 
+scale submodel (full model \code{m1}). Additionally, a reduced model without 
+interaction effects will be fitted (model \code{m2}).
 
 <<heteroscedastic-probit-full, eval = FALSE>>=
 m1 <- hetprobit(vote ~ age + I(age^2) + south + govelection + 
@@ -226,7 +240,7 @@ summary(m2)
 summary(m2)
 @
 
-Comparing these three models by means of information criteria, the homoscedastic 
+Comparing these three models by means of information criteria the homoscedastic 
 probit model (\code{mn}) replicated at the beginning would be the least preferred one.
 The BIC that penalizes complex models more strongly than the AIC is in favor of the 
 reduced heteroscedastic model \code{m2}. 
@@ -243,13 +257,16 @@ library("lmtest")
 lrtest(mn, m1, m2)
 @
 
-\section{Replication}
+\newpage
+\section{Replication}\label{sec:replication}
 This package is a somewhat simpler reimplementation of the function \code{hetglm()} from 
-the package \pkg{glmx} \citep{glmx}.\footnote{FIXME Compared to \code{hetglm}, \code{hetprobit} 
-currently does not offer: analytical Hessian, flexible link functions for the mean and scale 
-submodel, functionality for homoscedastic models, among further features.} 
-For illustration purposes a sparser model is chosen. Therefore, the polynomials of \code{age} and \code{education} as well as the interaction between \code{education} and \code{closing} are removed from 
-the model equation.
+the package \pkg{glmx} \citep{glmx}. In case of an implementation not limited to the 
+probit link for the mean and log link for the scale equation \pkg{glmx} offers more flexibility. 
+In particular \code{hetglm} offers analytical Hessian, flexible link functions for the mean and scale 
+submodel, functionality for homoscedastic models, among further features. \\
+For illustration purposes a sparser heteroscedastic model than in Section~\ref{sec:illustration} is 
+used. Therefore, the polynomials of \code{age} and \code{education} as well as the interaction 
+between \code{education} and \code{closing} are removed from the model equation.
 
 
 
@@ -263,7 +280,10 @@ m0 <- hetglm(vote ~ age + south + govelection + education +
 <<echo=FALSE>>=
 coeftest(m0)
 @
-In the \code{hetglm()}-call for the benchmark model \code{m0} two arguments needed to be switched from the defaults: The method has to be changed to \code{method = "BFGS"} (rather than \code{"nlminb"}) and the \code{hessian}-argument is set to \code{TRUE} in order to derive the hessian numerically. 
+In the \code{hetglm()} call for the benchmark model \code{m0} two arguments needed to be 
+switched from the defaults: The method has to be changed to \code{method = "BFGS"} 
+(rather than \code{"nlminb"}) and the \code{hessian}-argument is set to \code{TRUE} in order 
+to derive the hessian numerically. 
 
 <<hetprobit, eval=FALSE>>=
 m <- hetprobit(vote ~ age + south + govelection + education + closing |
@@ -271,7 +291,10 @@ m <- hetprobit(vote ~ age + south + govelection + education + closing |
   data = VoterTurnout)
 @
 
-Using a model table from \pkg{memisc} \citep{memisc} the replicated estimation results (model \code{m}) can be easily embedded in a \TeX-file (see Table~\ref{tab:mtable}).\footnote{The method \code{getSummary()} is not (yet) supported in the \pkg{glmx} package.}
+\newpage
+Using a model table from \pkg{memisc} \citep{memisc} the replicated estimation results 
+(model \code{m}) can be easily embedded in a \TeX-file (see Table~\ref{tab:mtable}). 
+However, the method \code{getSummary()} is not (yet) supported in the \pkg{glmx} package.
 
 <<mtable, eval=FALSE>>=
 library("memisc")
@@ -287,7 +310,7 @@ toLatex(mtable(m))
 \end{table}
 
 
-\newpage
+
 \bibliography{hetprobit}
 
 \end{document}
