git-svn-id: svn://svn.r-forge.r-project.org/svnroot/uibk-rprog-2017@176 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/nndd/vignettes/nndd-tex.Rnw
+++ b/pkg/nndd/vignettes/nndd-tex.Rnw
@@ -1,5 +1,5 @@
 \documentclass[nojss]{jss}
-\usepackage{booktabs,dcolumn,thumbpdf,lmodern, graphicx}
+\usepackage{booktabs,dcolumn,thumbpdf,lmodern}
 
 \author{Michal Lapinski \\JKU Linz}
 \Plainauthor{Michal Lapinski}
