--- a/pkg/nndd/vignettes/nndd.bib
+++ b/pkg/nndd/vignettes/nndd.bib
@@ -1,22 +1,40 @@
+@Article{Rubin:1973,
+url = {http://www.jstor.org/stable/2529684},
+author = {Donald B. Rubin},
+ journal = {Biometrics},
+ number = {1},
+ pages = {159-183},
+ publisher = {[Wiley, International Biometric Society]},
+ title = {Matching to Remove Bias in Observational Studies},
+ volume = {29},
+ year = {1973},
+}
+
+@Article{Huber:2015,
+author={Huber, Martin
+and and Lechner, Michael
+ and Steinmayr, Andreas},
+title={Radius Matching on the Propensity Score with Bias Adjustment: Tuning parameters and finite sample behaviour},
+journal={Empirical Economics},
+year={2015},
+volume={49},
+number={1},
+pages={1--31},
+issn={1435-8921},
+doi={10.1007/s00181-014-0847-1},
+}
+
+
+
 @Manual{R,
   title = {{R}: {A} Language and Environment for Statistical Computing},
   author = {{R Core Team}},
   organization = {R Foundation for Statistical Computing},
   address = {Vienna, Austria},
   year = {2017},
-  url = {https://www.R-project.org/}
+  url = {https://www.R-project.org/},
 }
 
-@Article{crch,
-  author = {Jakob W. Messner and Georg J. Mayr and Achim Zeileis},
-  title = {Heteroscedastic Censored and Truncated Regression with {crch}},
-  journal = {The R Journal},
-  year = {2016},
-  volume = {8},
-  number = {1},
-  pages = {173--181},
-  url = {https://journal.R-project.org/archive/2016-1/messner-mayr-zeileis.pdf}
-}
 
 @Article{Formula,
   author = {Achim Zeileis and Yves Croissant},
@@ -26,7 +44,7 @@
   volume = {34},
   number = {1},
   pages = {1--13},
-  doi = {10.18637/jss.v034.i01}
+  doi = {10.18637/jss.v034.i01},
 }
 
 @Article{sandwich,
@@ -37,7 +55,7 @@
   volume = {16},
   number = {9},
   pages = {1--16},
-  doi = {10.18637/jss.v016.i09}
+  doi = {10.18637/jss.v016.i09},
 }
 
 @Manual{memisc,
@@ -48,15 +66,14 @@
   url = {https://CRAN.R-project.org/package=memisc},
 }
 
-@Book{car,
-  author = {John Fox and Sanford Weisberg},
-  title = {An {R} Companion to Applied Regression},
-  year = {2011},
-  edition = {2nd},
-  publisher = {Sage},
-  address = {Thousand Oaks},
-  url = {http://socserv.socsci.mcmaster.ca/jfox/Books/Companion}
+@Manual{multiwayvcov,
+  title = {{multiwayvcov}: Multi-Way Standard Error Clustering},
+  author = {Nathaniel, Graham and Arai, Mahmood and  Hagströmer, Björn},
+  year = {2016},
+  note = {R package version 1.2.3},
+  url = {https://cran.r-project.org/package=multiwayvcov},
 }
+
 
 @Book{Verbeek:2004,
   author = {M. Verbeek},
@@ -64,6 +81,65 @@
   year = {2004},
   edition = {2nd},
   publisher = {John Wiley \& Sons},
-  address = {Chichester}
+  address = {Chichester},
 }
+
+@BOOK{AngristPischke:2008,
+title={Mostly Harmless Econometrics: An Empiricist's Companion},
+author={Joshua D. Angrist and Jorn-Steffen Pischke},
+publisher={Princeton University Press},
+year={2008},
+month={12},
+totalpages={392},
+timestamp={2009.03.16},
+}
+
+@BOOK{ImbensRubin:2015, 
+title={Causal Inference for Statistics, Social, and Biomedical Sciences: An Introduction},
+author={Guido W. Imbens and Donald B. Rubin},
+publisher={Cambridge University Press},
+year={2015},
+month={4},
+edition={1},
+isbn={9780521885881},
+url={http://amazon.com/o/ASIN/0521885884/},
+totalpages={644},
+timestamp={2017.06.29},
+}
+
+
+
+@article {Caliendo:2008,
+author = {Caliendo, Marco and Kopeinig, Sabine},
+title = {Some Practical Guidiance for the Implementation of Propensity Score Matching},
+journal = {Journal of Economic Surveys},
+volume = {22},
+number = {1},
+publisher = {Blackwell Publishing Ltd},
+issn = {1467-6419},
+url = {http://dx.doi.org/10.1111/j.1467-6419.2007.00527.x},
+doi = {10.1111/j.1467-6419.2007.00527.x},
+pages = {31--72},
+keywords = {Propensity score matching, Treatment effects, Evaluation, Sensitivity analysis, Implementation},
+year = {2008},
+}
+
+@article {Baker:2015,
+author = {Baker, S. R.},
+title = {Effects of Immigrant Legalization on Crime},
+journal = { American Economic Review},
+volume = {105},
+number = {5},
+publisher = {Blackwell Publishing Ltd},
+pages = {210--213},
+year = {2015},
+}
+
+
+
+
+
+
+
+
 
