fix some spelling errors
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/uibk-rprog-2017@196 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/nndd/vignettes/nndd.bib
+++ b/pkg/nndd/vignettes/nndd.bib
@@ -110,7 +110,7 @@ timestamp={2017.06.29},
 
 @article {Caliendo:2008,
 author = {Caliendo, Marco and Kopeinig, Sabine},
-title = {Some Practical Guidiance for the Implementation of Propensity Score Matching},
+title = {Some Practical Guidance for the Implementation of Propensity Score Matching},
 journal = {Journal of Economic Surveys},
 volume = {22},
 number = {1},
