--- a/pkg/nndd/vignettes/nndd.Rnw
+++ b/pkg/nndd/vignettes/nndd.Rnw
@@ -12,8 +12,8 @@
 
 \Abstract{
   The \pkg{nndd} package (\url{https://R-Forge.R-project.org/projects/uibk-rprog-2017/})
-  estimates the average treatment effect by applying nearest neighbours matching (NN) and difference in differences (DD). 
-  Nearest neighbours are matched by applying a GLM over an individual time span. In the following a liner model is estimated with a difference in differences setup. 
+  estimates the average treatment effect by applying nearest neighbour matching (NN) and difference in differences (DD). 
+  The nearest neighbours are matched by estimating a GLM over an individual time span. In the following a liner model is estimated with a difference in differences setup. 
   Each estimation (NN or DD) can depend on different covariates. Simple evaluation methods of the combined estimation are provided.
 }
 
@@ -46,7 +46,7 @@ library("nndd")
 \begin{document}
 
 \section{Introduction}
-The nndd package can be used for estmating causal effects if a selection into treatment is observed. The background of this method is that the treatment effect wants to be estimated by difference in differeces (DD).  DD leads only to unbiased and causal imcats if the treatment assignment is random and all other identifying assumptions hold (see \cite{AngristPischke:2008} for more details). Nevertheless, in many cases random assignment didn't occur, wasn't possible or reasonable. In natural-experiments (quasi-experiments) it is possible to observe exogenous assignments and estimate the treatment effect. However, often the assignment is not truly exogenous. In this case there are some possibility to overcome this selection. One is to control for observed characteristic in the analysis, another is to find an instrument (IV). A third one is to construct treatment and control groups such that they are as similar as possible in the observed characteristics (matching). All three methods are not the perfect solution and can be biased due to omitted variables, influencing the treatment assignment or invalid identifying assumptions. However, the research tends to the conclusion that matching can lead to smaller bias than just controlling for observed characteristics.\\ \citep{Rubin:1973, AngristPischke:2008, Caliendo:2008, ImbensRubin:2015, Huber:2015}
+The \code{nndd} package can be used to estimate causal effects if a selection into treatment is observed. The background of this method is that the treatment effect wants to be estimated by difference in differeces (DD).  In general DD leads only to unbiased and causal impacts if the treatment assignment is random and all other identifying assumptions hold (see \cite{AngristPischke:2008} for more details). Nevertheless, in many cases random assignment didn't occur, wasn't possible or reasonable. In natural-experiments (quasi-experiments) it is possible to observe exogenous assignments and estimate the treatment effect. However, often the assignment is not truly exogenous. In this case there are some possibilities to overcome this selection. One is to control for observed characteristic in the analysis, another is to find an instrument (IV). A third one is to construct treatment and control groups such that they are as similar as possible in the observed characteristics (matching). All three methods are not the perfect solution and can be biased due to omitted variables, influencing the treatment assignment or invalid identifying assumptions. However, the research tends to the conclusion that matching can lead to smaller bias than just controlling for observed characteristics.\\ \citep{Rubin:1973, AngristPischke:2008, Caliendo:2008, ImbensRubin:2015, Huber:2015}
 
 
 Summing up \cite[][401]{ImbensRubin:2015} point out:
@@ -56,10 +56,10 @@ Summing up \cite[][401]{ImbensRubin:2015} point out:
 \bibliography{nndd}
 
 
-It is to mention that this package performs only 1:1 nearest neighbour matching with replacement and without truncation (NN) which is a very straight forward method, but other matching metods mostly outperform NN.\\
+It is to mention that this package performs only 1:1 nearest neighbour matching with replacement and without truncation (NN) which is a very straight forward method, but other matching metods mostly outperform NN (see \cite{Huber:2015}).\\
 
 \paragraph{Syntax of Nearest Neighbour matching (NN) in Short\\}
-At first a generalized linear model (GLM) is estimated with the treatment status ($t$) as the dependent variable which is regressed on the independent variables ($Z$). Where $Z$ are observed variables being expected to influence the treatment status and not influencing the outcome variable of the treatment. In the next step the propensity score is predicted for the treatment and control groups. In the following to each treated observation $tg_i$ only one control observation $cg_j$ is selected. In the selection procedure the control observation $cg_j$ is matched to  $tg_i$ if it has the smallest absolute difference in the pscore among all control observation to the treated observation $tg_i$. 
+At first a generalized linear model (GLM) is estimated with the treatment status ($t$) as the dependent variable which is regressed on the independent variables ($z$). Where $z$ are observed variables being expected to influence the treatment status and not influencing the outcome variable of the treatment. In the next step the propensity scores are predicted for the treatment and control groups. In the following to each treated observation $tg_i$ only one control observation $cg_j$ is selected. In the selection procedure the control observation $cg_j$ is matched to  $tg_i$ if it has the smallest absolute difference in the pscore among all control observation to the treated observation $tg_i$. 
 
 \section{Implementation}
 
@@ -75,7 +75,7 @@ nndd(formula, data, indexes = c("year", "firm_id", "tg", "outcome"),
      ...)
 \end{verbatim}
 %
-Actually, the \code{formula} has to be be a two part \code{Formula} \citep{Formula}, specifying separate sets of regressors $x_i$ and $z_i$. For instance the formula can take a form of \code{tg | outcome ~ x | z} where  \code{tg} is the response and \code{z} regressor variable of the GLM. The variable \code{outcome} is the response and \code{x} the control variable of the DD model. The \code{data} argument specifies a data frame containing the variables occurring in the \code{formula} such as time and group identifiers. The data has to be a panel. The argument \code{indexes} is a of the name of the time, group, treatment identifier, and the outcome variable. Last but not least \code{t\_time} has to be specified. \code{t\_time} defines the time of the treatment. The other arguments can be looked up in the help page of \code{nndd}.  
+Actually, the \code{formula} has to be be a two part \code{Formula} \citep{Formula}, specifying separate sets of otcomes ($tg_i$, $outcome_i$) as well as regressors $x_i$ and $z_i$. For instance the formula can take a form of \code{tg | outcome ~ x | z} where  \code{tg} is the response and \code{z} regressor variable of the GLM. The variable \code{outcome} is the response and \code{x} the control variable of the DD model. The \code{data} argument specifies a data frame which contains the variables occurring in the \code{formula} such as time and group identifiers. In addition the data has to be a panel. The argument \code{indexes} is a list of the time, group and treatment identifier, as well as the outcome variable. Last but not least \code{t\_time} has to be specified, which defines the time of the treatment. The other arguments can be looked up in the help page of \code{nndd}.  
 
 
 A number of standard \proglang{S}3 methods are provided, see Table~\ref{tab:methods}.
@@ -101,7 +101,7 @@ Method & Description \\ \hline
 Due to these methods a number of useful utilities work automatically, e.g., \code{AIC()}, \code{BIC()},
 \code{coeftest()} (\pkg{lmtest}), \code{waldtest()} (\pkg{ttest}), \code{mtable()} (\pkg{memisc}), etc.
 
-In addition two \code{summary()} \proglang{S}3 methods are provided. One for the class \code{lm} and another for the class \code{lmc}. Where the class \code{lmc} is a child of (inherits) class \code{lm}, however implements an additional variable \code{clustervariables}. However, there is not construction function to create a class \code{lmc} object supported yet. 
+In addition two \code{summary()} \proglang{S}3 methods are provided. One for the class \code{lm} and another for the class \code{lmc}. Where the class \code{lmc} is a child of (inherits) class \code{lm} and implements an additional variable \code{clustervariables}. However, there is not construction function supportet to create a class \code{lmc} object yet. 
 
 \section{Illustration}
 
@@ -110,7 +110,7 @@ To illustrate the package's use in practice, a usual difference in difference me
 The author used the original data to examine the effects of the Immigration Reform and Control Act on crime. The IRCA was implemented in 1986 and forbid to hire or recruit undocumented immigrants. However the IRCA also implemented a near-universal legalization of immigrants in the United States.\\
 The theory behind a positive impact of the IRCA on crime is that an increased labour market opportunity due to IRCA increases legal work and decreases crime. The labour market opportunity is expected to increase because legal (documented) immigrants have a higher salary and lower chance to be fired. In the following crime decreases due to the increased employment. 
 
-The data consists of 31.206 observations on 21 variables. In detail it is a balanced data panel of 1.486 US counties over 21 years (the time span is 1980 till 2000). In this illustration we use some of the available variables. The chose variables are chosen with some care, however other variables might be also relevant and could improve the results. For a description of the variables and more detailed information of the data see the help page of the \code{IRCA} data.\\
+The data consists of 31.206 observations on 21 variables. In detail it is a balanced data panel of 1.486 US counties over 21 years (the time span is 1980 till 2000). In this illustration we use some of the available variables. The chose variables are chosen with some care, however other variables might be also relevant and could improve the results. For a description of the variables and more detailed information of the data see the help page of the \code{IRCA} data or \cite{Baker:2015}.\\
 
 At first we create a \code{nndd} object. We use \emph{year} and \emph{county} as time and individual identifiers. \emph{treated} is defined as the treatment variable and \emph{v\_crime} (violent crimes)  as the outcome. The treatment timing is set as the year 1986. As no \code{nn_time} is supported, the matching occurs only on the observed values one period before treatment. Last but not least we define not to display the state fixed effect in summary statistics. 
 
@@ -207,7 +207,7 @@ plot(nndd1c,data = IRCA ,which = c(1,2))
 
 In the left graph we can see that the pscore distribution of treated (blue) and control (red) was very different before NN. Especially many control units had a pscore close to zero. After matching the distributions of the pscore look alike. \\
 
-This brief illustration shows some features of the nndd package. There as more functions such as \code{t.test} which evaluates the match quality of NN. 
+This brief illustration shows some features of the nndd package. There are more functions such as \code{t.test} which evaluates the match quality of NN. 
 
 \newpage
 
