Corrected citation of data for Wooldridge
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/uibk-rprog-2017@219 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/fgamma/vignettes/fgamma.bib
+++ b/pkg/fgamma/vignettes/fgamma.bib
@@ -76,7 +76,7 @@
 
 @book{Wooldridge:2010,
   author = {Jeffrey Wooldridge},
-  edition = 4,
+  edition = {4th},
   publisher = {South-Western College Pub},
   title = {Introductory Econometrics: A Modern Approach},
   year = 2010
