removed Boot.difit because the new version of Boot from the car package works with update.difit; added \VignetteIndexEntry in vignette ditree.Rnw
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/uibk-rprog-2017@223 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/ditree/vignettes/ditree.Rnw
+++ b/pkg/ditree/vignettes/ditree.Rnw
@@ -27,6 +27,15 @@
 }
 
 
+%% Sweave/vignette information and metadata
+%% need no \usepackage{Sweave}
+%\VignetteIndexEntry{Distributional Trees}
+%\VignetteEngine{Sweave}
+%\VignetteDepends{ditree, partykit, gamlss.dist}
+%\VignetteKeywords{distributional, parametric modeling, tree algorithms}
+%\VignettePackage{ditree}
+
+
 <<preliminaries, echo=FALSE, results=hide>>=
 options(width = 70, prompt = "R> ", continue = "+  ")
 library("ditree")
