Added utf-8 package to vignette bc of strange output of vignette
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/uibk-rprog-2017@226 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/fgamma/vignettes/fgamma-tex.Rnw
+++ b/pkg/fgamma/vignettes/fgamma-tex.Rnw
@@ -1,5 +1,7 @@
 \documentclass[nojss]{jss}
 \usepackage{booktabs,dcolumn,thumbpdf,lmodern,float}
+\usepackage[utf8]{inputenc}
+\usepackage[T1]{fontenc}
 
 \author{Daniel Gstrein\\Universit\"at Innsbruck}
 \Plainauthor{Daniel Gstrein}
