slightly changed the dgp
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/uibk-rprog-2017@237 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/negbin1/vignettes/negbin1.Rnw
+++ b/pkg/negbin1/vignettes/negbin1.Rnw
@@ -69,7 +69,7 @@ dgp <- function(n = 1000, coef = c(0.2, 0.3, 0, 2)) {
     x2 = runif(n, -1, 1)
     )
   d$mu <- exp(coef[1] + coef[2] * d$x1 + coef[3] * d$x2)
-  d$y <- rnbinom(n, mu = d$mu, size = d$mu / coef[4])
+  d$y <- rnbinom(n, mu = d$mu, size = d$mu / exp(coef[4]))
   return(d)
 }
 
